# amanithsvg-sdk

./: CHANGES.md  LICENSE  README.md
examples/libgdx/gameCards/: README.md  build.gradle
examples/libgdx/gameCards/android/: AndroidManifest.xml  build.gradle
examples/libgdx/gameCards/desktop/: build.gradle
examples/libgdx/gameCards/gradle/wrapper/: gradle-wrapper.properties
examples/libgdx/gameCards/ios/: build.gradle  robovm.properties  robovm.xml
examples/svg2bitmap/: CMakeLists.txt  README.md
examples/svg2bitmap/CMake/: fix-bundle.cmake
examples/svg2bitmap/CMake/toolchain/: linux_x86.cmake  linux_x86_64.cmake  osx_ub.cmake  win_x86.cmake  win_x86_64.cmake
examples/svg2bitmap/src/: arg_parser.c  arg_parser.h  atlas.h  atlas_export.c  atlas_export.h  config.c  config.h  dynarray.h  file_utils.c  file_utils.h  json_utils.c  json_utils.h  main.c  miniz.c  png_utils.c  png_utils.h  rendering.c  rendering.h  str_hashmap.c  str_hashmap.h  str_utils.c  str_utils.h  xml_utils.c  xml_utils.h
examples/svgPlayer/: CMakeLists.txt
examples/svgPlayer/CMake/: fix-bundle.cmake
examples/svgPlayer/CMake/toolchain/: ios_ub.cmake
examples/svgPlayer/platform/android/app/: build.gradle
examples/svgPlayer/platform/ios/: AppDelegate.h  AppDelegate.m  View.h  View.m  ViewController.h  ViewController.m  main.m
examples/svgPlayer/platform/linux/: main.c
examples/svgPlayer/platform/macosx/: main.m
examples/svgPlayer/platform/win/: example.rc  main.c
examples/svgPlayer/src/: svg_player.c  svg_player.h
examples/svgViewer/: CMakeLists.txt  README.md
examples/svgViewer/CMake/toolchain/: android_armv5.cmake  android_armv7.cmake  android_armv8.cmake  android_mips.cmake  android_mips64.cmake  android_x86.cmake  android_x86_64.cmake  ios_ub.cmake  linux_armv5.cmake  linux_armv6hf.cmake  linux_armv7.cmake  linux_armv8.cmake  linux_mips.cmake  linux_mips64.cmake  linux_ppc64.cmake  osx_ub.cmake  qnx_armv7.cmake  qnx_x86.cmake
examples/svgViewer/platform/android/: settings.gradle
examples/svgViewer/platform/android/app/: build.gradle
examples/svgViewer/platform/android/app/src/main/: AndroidManifest.xml
examples/svgViewer/platform/android/app/src/main/java/com/mazatech/amanithsvg/svgviewer/: FileDialog.java  SvgViewerActivity.java  SvgViewerView.java
examples/svgViewer/platform/android/app/src/main/java/com/mazatech/android/: SVGAssetsAndroid.java  SVGAssetsConfigAndroid.java
examples/svgViewer/platform/android/app/src/main/java/com/mazatech/svgt/: AmanithSVG.java  AmanithSVGJNI.java  SVGAlignment.java  SVGAssets.java  SVGDocument.java  SVGPacker.java  SVGPoint.java  SVGScaler.java  SVGSurface.java  SVGTAlign.java  SVGTError.java  SVGTHandle.java  SVGTLogLevel.java  SVGTMeetOrSlice.java  SVGTRenderingQuality.java  SVGViewport.java
examples/svgViewer/platform/android/app/src/main/res/drawable/: file_dialog_selector_row.xml
examples/svgViewer/platform/android/app/src/main/res/layout/: error_view.xml  file_dialog_main.xml  file_dialog_row.xml
examples/svgViewer/platform/android/app/src/main/res/values/: strings.xml
examples/svgViewer/platform/ios/: AppDelegate.h  AppDelegate.m  View.h  View.m  ViewController.h  ViewController.m  info.plist.in  main.m
examples/svgViewer/platform/ios/storyboards/: Main.storyboard
examples/svgViewer/platform/linux/: bebas_neue_regular.h  dancing_script_regular.h  main.c  noto_mono_regular.h  noto_sans_regular.h  noto_serif_regular.h
examples/svgViewer/platform/macosx/: ShaderTypes.h  main.m  programs.metal  svg_viewer.icns
examples/svgViewer/platform/win/: main.c  resource.h  svg_viewer.rc
examples/svgViewer/platform/windows/: main.c  resource.h  svg_viewer.rc
examples/svgViewer/src/: svg_viewer.c  svg_viewer.h
examples/unity/Assets/SVGAssets/Atlases/: gameAtlas.asset  orcAtlas.asset
examples/unity/Assets/SVGAssets/Resources/: SVGAssetsConfigUnity.asset
examples/unity/Assets/SVGAssets/SVGFiles/: background.svg.txt  girl.svg.txt  orc.svg.txt  powBy_AmanithSVG_Light.svg.txt  ui.svg.txt
examples/unity/Assets/SVGAssets/Scenes/: game.unity  orc.unity  plane.unity  ui.unity
examples/unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
examples/unity/UserSettings/: EditorUserSettings.asset
include/SVGT/: svgt.h  svgtplatform.h
lib/linux/aarch64/sre/standalone/: libAmanithSVG-JNI.so.2.0.1  libAmanithSVG.so.1.2.192  libAmanithSVG.so.1.2.198  libAmanithSVG.so.1.2.202  libAmanithSVG.so.1.3.0  libAmanithSVG.so.1.3.1  libAmanithSVG.so.2.0.1  libAmanithSVGJNI.so.1.2.198
lib/linux/arm-gnueabi-v7a/sre/standalone/: libAmanithSVG-JNI.so.2.0.1  libAmanithSVG.so.1  libAmanithSVG.so.1.2.192  libAmanithSVG.so.1.2.198  libAmanithSVG.so.1.2.202  libAmanithSVG.so.1.3.0  libAmanithSVG.so.1.3.1  libAmanithSVG.so.2.0.1  libAmanithSVGJNI.so.1  libAmanithSVGJNI.so.1.3.1
lib/linux/arm-gnueabi/sre/standalone/: libAmanithSVG-JNI.so.2.0.1  libAmanithSVG.so.1.2.192  libAmanithSVG.so.1.2.198  libAmanithSVG.so.1.2.202  libAmanithSVG.so.1.3.0  libAmanithSVG.so.1.3.1  libAmanithSVG.so.2.0.1  libAmanithSVGJNI.so.1.2.192
lib/linux/arm-gnueabihf-v6/sre/standalone/: libAmanithSVG-JNI.so.2.0.1  libAmanithSVG.so.1.2.192  libAmanithSVG.so.1.2.198  libAmanithSVG.so.1.2.202  libAmanithSVG.so.1.3.0  libAmanithSVG.so.1.3.1  libAmanithSVG.so.2.0.1  libAmanithSVGJNI.so.1.2.192
lib/linux/mips64el/sre/standalone/: libAmanithSVG-JNI.so.2.0.1  libAmanithSVG.so.1.2.192  libAmanithSVG.so.1.2.198  libAmanithSVG.so.1.2.202  libAmanithSVG.so.1.3.0  libAmanithSVG.so.1.3.1  libAmanithSVG.so.2.0.1  libAmanithSVGJNI.so.1.2.192
lib/linux/mipsel/sre/standalone/: libAmanithSVG-JNI.so.2.0.1  libAmanithSVG.so.1  libAmanithSVG.so.1.2.192  libAmanithSVG.so.1.2.198  libAmanithSVG.so.1.2.202  libAmanithSVG.so.1.3.0  libAmanithSVG.so.1.3.1  libAmanithSVG.so.2.0.1  libAmanithSVGJNI.so.1  libAmanithSVGJNI.so.1.2.192
lib/linux/ppc64el/sre/standalone/: libAmanithSVG-JNI.so.2.0.1  libAmanithSVG.so.1.2.192  libAmanithSVG.so.1.2.198  libAmanithSVG.so.1.2.202  libAmanithSVG.so.1.3.0  libAmanithSVG.so.1.3.1  libAmanithSVG.so.2  libAmanithSVG.so.2.0.1  (+2 more)
(+242 files in other folders)
